--- a/django_project/requirements.txt
+++ b/django_project/requirements.txt
@@ -1,8 +1,11 @@
+Babel==2.6.0
 certifi==2018.10.15
 chardet==3.0.4
 Django==2.1.3
 django-crispy-forms==1.7.2
+django-phonenumber-field==2.1.0
 idna==2.7
+phonenumbers==8.10.3
 Pillow==5.4.0
 pygame==1.9.3
 python-dateutil==2.7.5
